add java flag to avoid warning on gapt.sh startup